frontend/test/should_pass/retype_018.grg
using attrib_model_001;

rule r {
	z:Node;
	optional {
		x:Node;
		hom(x,z);
		modify {
			y:NINT<x>;
		}
	}

	modify {}
}
