frontend/test/should_fail/from_storage_002.grg
using from_storage;

rule r(ref m:map<EE,NN>)
{
	x:NN -z:E<m>-> y:Node;
	
	modify {
	}
}
